# Rohbau3D

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: formatter.yml
config/: dataverse.yaml  dataverse_file_index.json  render_projections.yaml
scripts/: download.py  download_features.py  parse_rb3d_to_pcd.py  render_panorama.py  render_projections.py  site_compendium_generator.py
src/rohbau3d/core/: dataverse.py  io.py  rohbau3d_hub.py
src/rohbau3d/misc/: _logging.py  config.py  helper.py  transformation.py
src/rohbau3d/render/: __init__.py  projection_renderer.py
